--- a/resource/rrt_rqt_plugin_status.ui
+++ b/resource/rrt_rqt_plugin_status.ui
@@ -64,7 +64,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>300</x>
-     <y>300</y>
+     <y>320</y>
      <width>141</width>
      <height>27</height>
     </rect>
@@ -624,7 +624,7 @@ p, li { white-space: pre-wrap; }
    <property name="geometry">
     <rect>
      <x>290</x>
-     <y>280</y>
+     <y>300</y>
      <width>101</width>
      <height>17</height>
     </rect>
@@ -783,6 +783,29 @@ p, li { white-space: pre-wrap; }
    </property>
    <property name="checkable">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="missionName_lineEdit">
+   <property name="geometry">
+    <rect>
+     <x>160</x>
+     <y>270</y>
+     <width>113</width>
+     <height>27</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="setMission_pushButton">
+   <property name="geometry">
+    <rect>
+     <x>280</x>
+     <y>270</y>
+     <width>41</width>
+     <height>27</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>set</string>
    </property>
   </widget>
  </widget>
